--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header img{
     margin: 10px;
     border-radius: 20px;
     display: flex;
-
+    justify-content: space-between;
     display: inline-block;
 
    
