--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ header img{
     width: 50px;
     height: 50px;
 }
+naw{
+    justify-content: space-between;
+}
 .link-nav{
     background-color: aqua;
     text-decoration: none;
@@ -24,10 +27,7 @@ header img{
     padding: 20px;
     margin: 10px;
     border-radius: 20px;
-    display: flex;
-    justify-content: space-between;
-    display: inline-block;
-
+   justify-content: space-between;
    
     
 }
