--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 body {
     font-family: sans-serif;
+    font-size: 18px;
+    color: darkblue;
+}
+
+body {
+    font-family: sans-serif;
 }
 header{
     height:200px;
@@ -15,9 +21,6 @@ header img{
     width: 50px;
     height: 50px;
 }
-naw{
-    justify-content: space-between;
-}
 .link-nav{
     background-color: aqua;
     text-decoration: none;
@@ -27,7 +30,10 @@ naw{
     padding: 20px;
     margin: 10px;
     border-radius: 20px;
-   justify-content: space-between;
+    display: flex;
+
+    display: inline-block;
+
    
     
 }
@@ -44,5 +50,8 @@ footer{
 
     background-image: linear-gradient( white, blue);
     font-size: 18px;
+}
+.im:hover{
+    transform: translateX(300px);
 }
 
