--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header img{
     display: inline-block;
     
     margin: 0 auto; 
-    box-shadow: 10px, 10px, 5px;0px blue;
+    box-shadow: 10px 10px 5px 0px blue;
 
    
     
